# dolphin-fileviewboxplugin

./: CMakeLists.txt  fileviewboxplugin.cpp  fileviewboxplugin.desktop  fileviewboxplugin.h
